<resources>
    <string name="app_name">My Application</string>
    <string name="version">Version 0.0.1</string>
    <string name="home_button">home</string>
    <string name="discover_button">discover</string>
    <string name="post_button">post</string>
    <string name="notification_button">notifications</string>
    <string name="submit_post">submit post</string>
    <string name="post_submit_title_placeholder">title</string>
    <string name="post_submit_description_placeholder">description</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_projects">Projects</string>
</resources>
