<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/post_nav_button"
        android:name="com.folio.ui.post.PostFragment"
        tools:layout="@layout/fragment_post" />
    <fragment
        android:id="@+id/home_nav_button"
        android:name="com.folio.ui.home.HomeFragment"
        tools:layout="@layout/fragment_post" />
    <fragment
        android:id="@+id/discover_nav_button"
        android:name="com.folio.ui.discover.DiscoverFragment"
        tools:layout="@layout/fragment_post" />
    <fragment
        android:id="@+id/notifications_nav_button"
        android:name="com.folio.ui.notifications.NotificationsFragment"
        tools:layout="@layout/fragment_post" />




    <fragment
        android:id="@+id/nav_projects"
        android:name="com.folio.ui.projects.ProjectsFragment"
        android:label="@string/menu_projects"
        tools:layout="@layout/fragment_projects" />

    <fragment
        android:id="@+id/nav_home"
        android:name="com.folio.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.folio.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.folio.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.folio.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>