<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NavigationActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:text="@string/version"
        android:textColor="@color/white"
        android:translationZ="90dp"/>

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_navigation" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_dialog_email" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <Button
            android:id="@+id/post_nav_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_button"/>

        <Button
            android:id="@+id/home_nav_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_button"/>

        <Button
            android:id="@+id/discover_nav_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discover_button"/>

        <Button
            android:id="@+id/notifications_nav_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notification_button"/>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>